policies/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Pod Security Standards
    policies.kyverno.io/severity: medium
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-privileged
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
                - DaemonSet
      validate:
        message: "Privileged containers are not allowed."
        pattern:
          spec:
            template:
              spec:
                =(ephemeralContainers):
                  - name: "*"
                    =(securityContext):
                      =(privileged): "false"
                =(initContainers):
                  - name: "*"
                    =(securityContext):
                      =(privileged): "false"
                containers:
                  - name: "*"
                    =(securityContext):
                      =(privileged): "false"
